--- a/app/main.css
+++ b/app/main.css
@@ -99,6 +99,7 @@ header {
         justify-content: end;
         align-items: center;
         gap: 1rem;
+        padding: 0 1rem;
     }
 
     & h1 {
