--- a/app/main.css
+++ b/app/main.css
@@ -1,3 +1,6 @@
+:root {
+    --chevron: url("data:image/svg+xml,%3C%73%76%67%20%78%6D%6C%6E%73%3D%22%68%74%74%70%3A%2F%2F%77%77%77%2E%77%33%2E%6F%72%67%2F%32%30%30%30%2F%73%76%67%22%20%77%69%64%74%68%3D%22%32%34%22%20%68%65%69%67%68%74%3D%22%32%34%22%20%76%69%65%77%42%6F%78%3D%22%30%20%30%20%32%34%20%32%34%22%20%66%69%6C%6C%3D%22%6E%6F%6E%65%22%20%73%74%72%6F%6B%65%3D%22%63%75%72%72%65%6E%74%43%6F%6C%6F%72%22%20%73%74%72%6F%6B%65%2D%77%69%64%74%68%3D%22%32%22%20%73%74%72%6F%6B%65%2D%6C%69%6E%65%63%61%70%3D%22%72%6F%75%6E%64%22%20%73%74%72%6F%6B%65%2D%6C%69%6E%65%6A%6F%69%6E%3D%22%72%6F%75%6E%64%22%20%63%6C%61%73%73%3D%22%66%65%61%74%68%65%72%20%66%65%61%74%68%65%72%2D%63%68%65%76%72%6F%6E%73%2D%64%6F%77%6E%22%3E%3C%70%6F%6C%79%6C%69%6E%65%20%70%6F%69%6E%74%73%3D%22%37%20%31%33%20%31%32%20%31%38%20%31%37%20%31%33%22%3E%3C%2F%70%6F%6C%79%6C%69%6E%65%3E%3C%70%6F%6C%79%6C%69%6E%65%20%70%6F%69%6E%74%73%3D%22%37%20%36%20%31%32%20%31%31%20%31%37%20%36%22%3E%3C%2F%70%6F%6C%79%6C%69%6E%65%3E%3C%2F%73%76%67%3E");
+}
 body {
     font-family: sans-serif;
     margin: 0;
@@ -15,6 +18,8 @@ h4 {
     display: grid;
     gap: 1rem;
     grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto-fit, minmax(0%, 1fr));
+    margin: 1rem 0;
 }
 @media (min-width: 768px) {
     .hstack {
@@ -27,9 +32,53 @@ h4 {
 .vstack {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
+.fullheight {
+    aspect-ratio: unset;
+    height: auto;
+    height: 100%;
+}
+
+.hflex {
+    display: flex;
+    flex-direction: row;
+}
+
+.sidebyside label {
+    display: grid;
+    grid-template-columns: 60% 40%;
+}
+
+/* .check-grid {
+    display: grid;
+    grid-template-columns: 60% 40%;
+
+    & input[type="text"] {
+        font-size: 0.9rem;
+        padding: 0.25rem;
+        margin: 0.2rem;
+    }
+} */
+
+.optional-check-input {
+    & div {
+        transition: all 200ms ease;
+    }
+
+    & label:has(input[type="checkbox"]) + div:has(input[type="text"]) {
+        width: 100%;
+        overflow: hidden;
+        height: 0;
+    }
+
+    & label:has(input[type="checkbox"]:checked) + div:has(input[type="text"]) {
+        /* height: 0; */
+        /* height: 3rem; */
+        height: 3rem;
+    }
+} 
 
 /* INPUTS */
 label {
@@ -38,9 +87,10 @@ label {
     gap: 0.25rem;
 }
 label:has(> input[type="checkbox"]) {
+    align-items: center;
     flex-direction: row;
 }
-input[type="text"], input[type="number"], select, textarea {
+input[type="text"], input[type="number"], textarea, .selectbox {
     outline: none;
     border: 2px solid lightgrey;
     padding: 0.5rem;
@@ -50,10 +100,26 @@ input[type="text"], input[type="number"], select, textarea {
 input[type="text"]:focus, input[type="number"]:focus, select:focus, textarea:focus {
     border-color: darkslategray;
 }
-select {
-    appearance: none;
-    border-radius: 0;
-    outline: none;
+.selectbox {
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+    & select {
+        appearance: none;
+        outline: none;
+        border: none;
+        font-size: 1rem;
+        padding-right: 1rem;
+    
+        background-image: var(--chevron);
+        background-color: white;
+        background-position: center right 0rem;
+        background-size: 1.2rem;
+        background-repeat: no-repeat;
+    }
+}
+.selectbox:has(select:focus) {
+    border-color: darkslategray;
 }
 
 /* Wrapper */
@@ -73,6 +139,21 @@ textarea.bigbox {
     box-sizing: border-box;
 }
 
+.risk-calculator {
+    border: 2px solid lightgrey;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+
+    & [paas-calculator-output] {
+        /* text-align: right; */
+        font-size: 1.5rem;
+        /* font-weight: bold; */
+        /* font-family: monospace; */
+        /* margin-right: 1.5rem; */
+    }
+
+}
+
 /* Headings */
 main h2::before {
     content: "# ";
@@ -84,9 +165,10 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
-    background-color: #2c3e50;
+    background-color: #e84118;
     border-bottom: 2px solid lightgrey;
     padding: 1rem 0;
+    z-index: 999;
 
     & * {
         margin: 0;
@@ -114,12 +196,6 @@ header {
 main {
     margin-top: 5rem;
 }
-/*
-main h2::before {
-    content: "## ";
-    font-style: italic;
-    color: lightgray;
-} */
 
 /* Forms */
 
@@ -129,9 +205,4 @@ main h2::before {
 #output {
     border: 2px solid black;
     padding: 1rem;
-}
-dialog {
-    /* position: absolute; */
-    /* top: 0; */
-    /* width: 100%; */
 }
